--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,22 @@
 # dependencies
 node_modules/
 .pnp/
-.pnp.js
+**/.pnp.js
 
 # testing
 coverage/
 
 # production
-build/
+/client/build/
 
 # misc
-.DS_Store/
-.env/
-.env.local/
-.env.development.local/
-.env.test.local/
-.env.production.local/
+**.DS_Store
+**/.env
+**/.env.local
+**/.env.development.local
+**/.env.test.local
+**/.env.production.local
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+/client/npm-debug.log*
+/client/yarn-debug.log*
+/client/yarn-error.log*
