--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "concurrently \"npm run client\" \"npm run server\"",
-    "client": "cd client && npm start",
-    "server": "cd server && node index.js",
+    "start": "concurrently \"yarn client\" \"yarn server\"",
+    "client": "cd client && yarn start",
+    "server": "cd server && yarn server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
